Archive2/a3/5a4fce4efd5320/output
main.cpp:8:23: error: template instantiation depth exceeds maximum of 900 (use -ftemplate-depth= to increase the maximum) instantiating 'Loop<T*> Loop<T>::operator->() [with T = int************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************]'
     Loop<int> i, j = i->hooray;
                       ^
main.cpp:8:23:   recursively required from 'Loop<T*> Loop<T>::operator->() [with T = int]'
main.cpp:8:23:   required from here

main.cpp:8:23: error: template instantiation depth exceeds maximum of 900 (use -ftemplate-depth= to increase the maximum) instantiating 'struct Loop<int*************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************>'
main.cpp:8:23:   recursively required from 'Loop<T*> Loop<T>::operator->() [with T = int]'
main.cpp:8:23:   required from here

main.cpp:8:23: error: invalid use of incomplete type 'struct Loop<int*************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************>'
main.cpp:3:26: error: declaration of 'struct Loop<int*************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************>'
 template<class T> struct Loop { Loop<T*> operator->(); };
                          ^
main.cpp:8:18: warning: unused variable 'j' [-Wunused-variable]
     Loop<int> i, j = i->hooray;
                  ^
